; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_condvar3_1.c_mythread.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_condvar3_1.c_mythread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mutex1 = common dso_local global i32 0, align 4
@waiting = common dso_local global i32 0, align 4
@cv1 = common dso_local global i32 0, align 4
@mutex = common dso_local global i32 0, align 4
@cv = common dso_local global i32 0, align 4
@abstime = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@timedout = common dso_local global i32 0, align 4
@awoken = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mythread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = call i64 @pthread_mutex_lock(i32* @mutex1)
  %5 = icmp eq i64 %4, 0
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load i32, i32* @waiting, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @waiting, align 4
  %10 = call i64 @pthread_mutex_unlock(i32* @mutex1)
  %11 = icmp eq i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = call i64 @pthread_cond_signal(i32* @cv1)
  %15 = icmp eq i64 %14, 0
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = call i64 @pthread_mutex_lock(i32* @mutex)
  %19 = icmp eq i64 %18, 0
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = call i32 @pthread_cond_timedwait(i32* @cv, i32* @mutex, i32* @abstime)
  store i32 %22, i32* %3, align 4
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* @ETIMEDOUT, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %1
  %27 = load i32, i32* @timedout, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* @timedout, align 4
  br label %32

29:                                               ; preds = %1
  %30 = load i32, i32* @awoken, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* @awoken, align 4
  br label %32

32:                                               ; preds = %29, %26
  %33 = call i64 @pthread_mutex_unlock(i32* @mutex)
  %34 = icmp eq i64 %33, 0
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  %37 = load i8*, i8** %2, align 8
  ret i8* %37
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @pthread_mutex_lock(i32*) #1

declare dso_local i64 @pthread_mutex_unlock(i32*) #1

declare dso_local i64 @pthread_cond_signal(i32*) #1

declare dso_local i32 @pthread_cond_timedwait(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
